--- a/index.html
+++ b/index.html
@@ -358,14 +358,10 @@
 </section>
 <section id="instrucciones" class="slide level2 small">
 <h2>Instrucciones</h2>
-<div>
 <ul>
-<li class="fragment">Diapositivas: <a href="https://ivelasq.quarto.pub/intro-to-quarto/" class="uri">https://ivelasq.quarto.pub/intro-to-quarto/</a></li>
-<li class="fragment">Sesión 1 en GitHub Pages: <a href="https://github.com/ivelasq/2022-10-27_intro-to-quarto" class="uri">https://github.com/ivelasq/2022-10-27_intro-to-quarto</a></li>
-<li class="fragment">Exercise repo: &lt; &gt;</li>
-<li class="fragment">rstudio.cloud Project: &lt; &gt;</li>
+<li>Diapositivas: <a href="https://taller-politai-2024-0.github.io/Sesion-0.1/" class="uri">https://taller-politai-2024-0.github.io/Sesion-0.1/</a></li>
+<li>Sesión 1 en GitHub Pages: <a href="https://taller-politai-2024-0.github.io/Sesion-1/" class="uri">https://taller-politai-2024-0.github.io/Sesion-1/</a></li>
 </ul>
-</div>
 <div class="fragment">
 <div class="callout callout-tip callout-titled callout-style-default">
 <div class="callout-body">
@@ -611,14 +607,16 @@
 <li>Wickham, H., &amp; Grolemund, G. (2016). R for data science: import, tidy, transform, visualize, and model data. ” O’Reilly Media, Inc.” En <a href="https://r4ds.had.co.nz/">First Edition</a> y <a href="https://r4ds.hadley.nz/">Second Edition</a></li>
 <li>Fernández, M., I. (2020). Ventajas de R como herramienta para el Análisis y Visualización de datos en Ciencias Sociales. Revista Científica de la UCSA, 7(2), 97-111. Epub 00 de agosto de 2020. <a href="https://doi.org/10.18004/ucsa/2409-8752/2020.007.02.097" class="uri">https://doi.org/10.18004/ucsa/2409-8752/2020.007.02.097</a></li>
 </ul>
+
+<aside><div>
 <p><em>El contenido de este curso se ofrece bajo una licencia <a href="https://en.wikipedia.org/wiki/Public_domain">Dominio público</a>. El contenido de este curso puede considerarse bajo esta licencia a menos que se notifique de manera diferente.</em></p>
-</section>
+</div></aside></section>
 <section id="qué-es-el-p-value" class="slide level2 r-stretch">
 <h2>¿QUÉ ES EL P-VALUE?🎲</h2>
 <p></p><div id="youtube-frame" style="position: relative; padding-bottom: 56.25%; /* 16:9 */ height: 0;"><iframe width="100%" height="" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/ibmjzFv4K1Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div><p></p>
 
 <div class="footer footer-default">
-<p>https://ivelasq.quarto.pub/intro-to-quarto/</p>
+<p><a href="https://taller-politai-2024-0.github.io/Sesion-0.1/">Sesión 1</a></p>
 </div>
 <aside><div>
 <p>Source: <a href="https://www.youtube.com/@Datapolitica">Data política</a> en YouTube</p>
