--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@
 <aside><div>
 <p>Revisa <a href="http://scielo.iics.una.py/pdf/ucsa/v7n2/2409-8752-ucsa-7-02-97.pdf">Fernández, M. I. (2020)</a>!</p>
 </div></aside></section>
-<section id="gracias-por-tu-atención" class="slide level2">
-<h2>Gracias por tu atención!</h2>
+<section id="gracias-por-su-atención" class="slide level2">
+<h2>Gracias por su atención!</h2>
 <p>¡Espero que la presentación les anime a explorar R y sus diversos usos!</p>
 <ul>
 <li>Revisen <a href="https://quarto.org/">Quarto documentation</a>.</li>
